--- a/main.css
+++ b/main.css
@@ -232,60 +232,21 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
 
 /*Custom CSS styling*/
-body, html {height: 100%;color: #181b1b}
+body, html {min-height: 200px;overflow: scroll;color: #181b1b}
 h1,h2,h3,h4,h5,h6 {font-family:	"Open Sans", sans-serif}
 body {font-family: "Open Sans", sans-serif;background-color: #181b1b;color:#f2f2f2}
 button,select,input{outline: none;}
 a{text-decoration:none;}
 hr{margin: 0px;}
-#nextBar {width: 1%;height: 3px;background-color: #66fcf1;}
-.logo {text-decoration: none;font-family: 'Bangers', cursive;font-size: 28px;color:#00ffff;text-shadow: 2px 2px #f2f2f2;-webkit-text-stroke: 1px black;}
 .next-button{width: 100%;margin-top:6px;border: solid 1.5px #037d75;border-radius: 3px;}
-.back {background-color: #181b1b;color: #f2f2f2;}
-.nohov{background-color: #181b1b;border: none;color: #f2f2f2;text-align: center;text-decoration: none;display: inline-block;font-size: 26px;margin: 4px 28px;cursor: pointer;}
-.tab-top {background-color: #181b1b;color: #f2f2f2;}
-.typename{font-size: 16px;}
-.item{font-size: 14px;}
-.data{margin: 10px;font-size: 10px;color: grey;}
-.fu-label {
-	display: inline-block;
-	padding: 5px;
-	color: grey;
-	margin:10px 8px;
-	text-align: center;
-	font-size: 12px;
-}
-.fu-input {
-	display: none;
-	width:0;
-}
-.content-text {
-	background-color: black;
-	color: white;
-	border :solid 1px #037d75;
-	padding: 10px;
-	outline: none;
-	height: 100%;
-	width: 100%;
-	margin-top:5px;
-	resize: none;
-}
-.side-buttons {
-	width: 60px;
-	font-size: 10px;
-	margin:0px;
-}
-.add-button {
-	box-shadow:0 2px 5px 0 #262626,0 2px 10px 0 #0d0d0d;
-	border:none;
-	background-color: #cccccc;
-}
-@media (min-width:993px){.add-button{display:none!important}}
-/* Hide scrollbar for Chrome, Safari, IE, Edge and Firefox */
-.scroll::-webkit-scrollbar {
-	display: none;
-}
-.scroll {
-	-ms-overflow-style: none;	/* IE and Edge */
-	scrollbar-width: none;	/* Firefox */
-}
+.scroll::-webkit-scrollbar {display: none;}
+.scroll {-ms-overflow-style: none;scrollbar-width: none;}
+.passage,.room {border: .3vh solid #f2f2f2;position: absolute;padding: 5vh;font-size: 4vh;overflow: hidden;margin: inherit;}
+.line {border-top: .3vh solid #f2f2f2;border-right: .3vh solid #f2f2f2;position: absolute;margin: inherit;}
+.blank {border: 0vh solid #181b1b;position: absolute;padding: 5vh;margin: inherit;}
+#map{margin: 10vh;}
+.stairs-elev{position: absolute;background-image: url('svg/stairs-elev.svg');background-repeat: no-repeat;background-size:contain;overflow: hidden;margin: inherit;}
+.stairs{position: absolute;background-image: url('svg/stairs.svg');background-repeat: no-repeat;background-size: 100% 100%;transform: rotate(180deg);overflow: hidden;margin: inherit;}
+.toilet{position: absolute;border: .3vh solid #f2f2f2;background-image: url('svg/toilet.svg');background-repeat: no-repeat;background-size: 60% 60%;overflow: hidden;margin: inherit;}
+.door-u{position: absolute;background: none;border: 0.2vh solid #f2f2f2;border-radius: 100% 0 0 0;-moz-border-radius: 100% 0 0 0;-webkit-border-radius: 100% 0 0 0;}
+.door-d{position: absolute;background: none;border: 0.2vh solid #f2f2f2;border-radius: 0 0 100% 0;-moz-border-radius: 0 0 100% 0;-webkit-border-radius: 0 0 100% 0;}
